<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dreamy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="milestones">Milestones</string>
    <string name="title_activity_front">Front</string>
    <string name="title_activity_splash">Splash</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="pref_user_email">Change Email</string>
    <string name="pref_user_email_summary">Change your Email</string>
    <string name="pref_user_pass">Change Password</string>
    <string name="pref_user_pass_summary">Change your Password</string>
    <string name="pref_user_first">Set First Name</string>
    <string name="pref_user_first_summary">Change your First Name</string>
    <string name="pref_user_last">Set Last Name</string>
    <string name="pref_user_last_summary">Change your Last Name</string>

    <string name="pref_user_profile">User Profile</string>

</resources>
